# Privacy-preserving-face-verification-based-on-Fully-Homomorphic-Encryption

./: README.md
Program File/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  read me.txt
